2nd lesson-crating the react app using nodemodules and parcel bundler

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href=" .css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>  
     <!-- creating the h1 from html
@@ -38,10 +38,7 @@
         <!-- <h1>I'm Jhonson</h1> --here the h1 will replace{not appended} the data while root got rendered from the react -->
     </div>
     
-    <script crossorigin src="https://unpkg.com/react@18/umd/react.development.js"></script>
-    <script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
-
-    <script src="app.js"></script>
+    <script type="module" src="app.js"></script>
 
 </body>
 </html>
